# EWC

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
APP/: component.mk
APP/inc/: GPIO.h  MQTT.h  NVS.h  function.h
APP/src/: Character.c  D_open.c  GPIO.c  MQTT.c  MQTT_Publish.c  MQTT_Subscribed.c  NVS.c  Pulse_CNT.c  Timer.c
components/blufi/: CMakeLists.txt  app_blufi.c  app_blufi.h  component.mk
main/: CMakeLists.txt  Kconfig.projbuild  main.c
